--- a/style/prottfolio.css
+++ b/style/prottfolio.css
@@ -239,7 +239,10 @@ input[type="text"] input[type="email"]{
     margin-bottom: 20px;
     width: 100%;
     padding: 10px 20px;
-    border: none;
+     border: none; 
+}
+.wi{
+    margin-top: 100px;
 }
 
 
